Incorrect normals in edit mode (especially after undo) #94974

Closed
opened 2022-01-17 14:15:50 +01:00 by Henrik D. · 8 comments
Member

System Information
Operating system: Linux-5.15.0-2-amd64-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.86

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-16 14:25, hash: d914cfcb7a
Worked: 3.0.0, probably caused by cfa53e0fbe (untested)

Short description of error
Something seems to go wrong with the normals in editmode after I use undo on a mesh with smooth normals. Here is an image:
Screenshot_20220117_141156.png
Read to the steps to reproduce for a more detailed description of this image.

Exact steps for others to reproduce the error
Based on the default startup

  1. Set the default cube to smooth shading (eg. using right click context menu)
  2. Enter editmode of the default cube
  3. Select a vertex and undo the selection using Ctrl+Z
  4. Cube is now dark.
  5. Select a vertex of the cube and move it to observe how single triangles of the GPU side mesh become colored again.
**System Information** Operating system: Linux-5.15.0-2-amd64-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.86 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-16 14:25, hash: `d914cfcb7a` Worked: 3.0.0, probably caused by cfa53e0fbe (untested) **Short description of error** Something seems to go wrong with the normals in editmode after I use undo on a mesh with smooth normals. Here is an image: ![Screenshot_20220117_141156.png](https://archive.blender.org/developer/F12808480/Screenshot_20220117_141156.png) Read to the steps to reproduce for a more detailed description of this image. **Exact steps for others to reproduce the error** Based on the default startup 1. Set the default cube to smooth shading (eg. using right click context menu) 2. Enter editmode of the default cube 3. Select a vertex and undo the selection using Ctrl+Z 4. Cube is now dark. 5. Select a vertex of the cube and move it to observe how single triangles of the GPU side mesh become colored again.
Author
Member

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84

#94986 was marked as duplicate of this issue

#94986 was marked as duplicate of this issue
Author
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, and I've found a fix. Thanks for the report.

Can confirm, and I've found a fix. Thanks for the report.
Hans Goudey changed title from Normal calculation fails in editmode after undo to Incorrect normals in edit mode (especially after undo) 2022-01-17 21:53:38 +01:00
Member

Added subscribers: @AgentA1cr, @iss

Added subscribers: @AgentA1cr, @iss

This issue was referenced by d590e223da

This issue was referenced by d590e223daf6e20d462f2b197d32606d69873051
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2022-01-21 23:14:37 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94974
No description provided.